--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django = "4.2.2"
 pillow = "^11.0.0"
 django-phonenumber-field = "^8.0.0"
 django-phonenumbers = "^1.0.1"
+redis = "^5.2.1"
 
 
 [tool.poetry.group.lint.dependencies]
